@@ -36,9 +36,14 @@ FS reiserfs::get_filesystem_support( )
 	if ( ! system( "which reiserfsck 1>/dev/null 2>/dev/null" ) ) 
 		fs .check = true ;
 		
-	//resizing is a delicate process which requires 3 commands..
-	if ( ! system( "which resize_reiserfs 1>/dev/null 2>/dev/null" ) && fs .read && fs .check ) 
-		fs .grow = fs .shrink = true ;
+	//resizing is a delicate process ...
+	if ( ! system( "which resize_reiserfs 1>/dev/null 2>/dev/null" ) && fs .check ) 
+	{
+		fs .grow = true ;
+		
+		if ( fs .read ) //needed to determine a min filesystemsize..
+			fs .shrink = true ;
+	}
 	
 	//we need to call resize_reiserfs after a copy to get proper used/unused
 	if ( ! system( "which dd 1>/dev/null 2>/dev/null" ) && fs .grow ) 
