@@ -1,3 +1,8 @@
+2004-12-15 Bart Hakvoort  <gparted@users.sf.net>
+
+	* Refined checks for functionality a bit. e.g. even if a filesystem can't be read, it's still possible to grow it 
+	  (but shrinking gets disabled). Also removed that stupid grow_only flag from Utils.h and reordered Win_GParted::Set_Valid_Operations()
+
 2004-12-14 Bart Hakvoort  <gparted@users.sf.net>
 
 	* added support for jfs (create, copy, grow) and hfs (create, copy)
